# Mira

./: .eslintrc.json  .gitignore  .prettierrc.json  README.md  bun.lockb  index.html  index.tsx  package.json  pnpm-lock.yaml  pwa.config.ts  tailwind.config.js  tsconfig.json  uno.config.ts  vite.config.ts  vite.pwa.config.js  vite.pwa.config.ts  vite.tauri.config.js  vite.tauri.config.ts
.github/workflows/: release.yml
app/: MainApp.svelte  MainApp.tsx  index.ts
app/assets/audio/rainville/: index.ts
app/assets/styles/: mdc-theme.scss
app/assets/translations/: index.ts
app/components/: ClickOutside.svelte  RainvillePlayerCard.svelte
app/components/svg+path/: KeyboardArrowUpOutline.tsx  PauseCircleOutline.tsx  PlayCircleOutline.tsx  RainyOutline.tsx
app/models/: RainvillePlayer.ts
app/utils/: clickOutside.ts  i18n.ts
app/views/: Splash.svelte  Splash.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
types/: unplugin-icons-env.d.ts
