[package]
name = "mira"
version = "1.0.1"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "macos-private-api"] }
window-vibrancy = "0.3.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
